fixed short-story alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,6 +220,7 @@
 
     .cv-segment p {
         padding-left: 1.5em;
+        padding-right: 1.5em;
         text-indent:-1.5em;
         margin: 8px;
     }
@@ -299,8 +300,8 @@
     
     .short-story  {
         max-width: 500px;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
 
     .project-panel .video > iframe,
